kotlin.web.demo.test/testData/errors/twoErrorsInOneLine.kt
fun main(args : Array<String>) {
  prntln("ERROR"
}